Specify UseConcMarkSweepGC
Essentially this reverts commit 0bf85bf, which replaced it with UseG1GC
because it's deprecated in JDK11.

We are still using JDK8 and CMS should stay the default.

Change-Id: I12955aebebbbe0b02e82fa663a7e43b4cad8af31
Issue: 135535322